test/typeCheckTest/fail/test39.ic
class StoreVoid {
	void test () {
		Library.println("I don't return anything");
	}
	
	void main (string [] args) {
		int x = test();
	}
}